Fix alignment issues by using rems for $grid-width

--- a/app/assets/stylesheets/base/universal.scss
+++ b/app/assets/stylesheets/base/universal.scss
@@ -1,4 +1,4 @@
-$grid-width: 500px;
+$grid-width: 35rem;
 $lowercase-grid-to-grid-ratio: 0.5;
 $lowercase-grid-width: $lowercase-grid-to-grid-ratio*$grid-width;
 $stroke-width-ratio: 0.1;
